# ops-intelligence

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  dashboard_data.json  docker-compose.yml  init-aws.sh  main.py  pyproject.toml
.devcontainer/: devcontainer.json
docs/: 01_project_structure.md  02_crewai_setup.md  03_agents_and_tools.md  04_web_dashboard.md
src/ops_intelligence/: aws.py  crew.py
src/ops_intelligence/config/: agents.yaml  tasks.yaml
src/ops_intelligence/tools/: calculator.py  simulator.py
src/web/: dashboard.py
